# thesis

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.json  pull_request_template.md  pyproject.toml
data/0/: 0.cfg  0.tsk
data/1/: 1.tsk
data/2/: 2.tsk
data/3/: Config.cfg  Tasks.tsk
data/4/: Config.cfg  Tasks.tsk
data/5/: 2.tsk  5.cfg  5.tsk
data/6/: 1.tsk
data/custom/: custom.cfg  custom.tsk
data/order/: o.tsk
src/: algorithm.py  arch_model.py  builder.py  edf.py  format.py  graph_model.py  log.py  main.py  mapper.py  model.py  objective.py  rate_monotonic.py  scheduler.py  solver.py  timed.py
test/: edf_test.sh
tests/: edf_test.sh  rm_test.sh
