[tool.poetry]
name = "extsched"
version = "0.1.0-alpha"
description = "Static scheduler maximizing the amount of time that can be dynamically allocated for sporadic tasks."

license = "MPL-2.0"

authors = [
	"Antoine Sébert <antoine.sb@orange.fr>"
]

readme = 'README.md'

repository = "https://github.com/AntoineSebert/thesis"

keywords = ['scheduler', 'CLI', 'thesis']

classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Topic :: System :: Operating System Kernels"
]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "*"
defusedxml = "^0.7.0"
sortedcontainers = "^2.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-import-order = "^0.18"
pep8-naming = "^0.11.1"
flake8-bandit = "^2.1"
flake8-bugbear = "^21.3"
flake8-commas = "^2.0"
flake8-comprehensions = "^3.0"
flake8-executable = "^2.0"
flake8-annotations = "^2.0"
flake8-cognitive-complexity = "^0.1.0"
better-exceptions = "^0.3"